# elastic-product-search-lab

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.kafka.yml  docker-compose.yml  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
GrooveGraph/: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml
artifacts/: repo-manifest.json  repo-manifest.md
config/: esci-relevance-gate.json  eval_thresholds.json  kafka-topics.json  products-minimal-normalization.pipeline.json  relevance-gate.json  sample_search_policies.json  search-quality-gate.json
docker/: api.Dockerfile  frontend.Dockerfile  prometheus.yml
docs/: application_facts.md  architecture_overview.md  benchmark-artifacts.md  canonical_builder_architecture.md  canonical_product_schema.md  dataset_integration.md  dependency-strategy.md  deployment.md  ecommerce_role_mapping.md  esci_dataset.md  evaluation_metrics.md  event_retention_and_ilm.md  hybrid_search.md  implementation-plan.md  index_roles_and_aliasing.md  ingestion.md  ingestion_architecture.md  kafka_dev_flow.md  kafka_indexing.md  kaufland_role_mapping.md  kibana_search_demo.md  local_quickstarts.md  mapping_decisions.md  mcp.md  migration_note.md  performance_and_resilience.md  policy_index_design.md  read_path_strategy.md  relevance.md  relevance_strategy.md  reranking.md  testing.md  troubleshooting.md  validation-strategy.md
elastic-ai-search-decision-lab/: README.md  package.json
examples/: bad_mapping_example.md  keyword_vs_hybrid.md  performance_report.md  relevance_report.md  reranking_report.md
frontend/: index.html  package.json  vite.config.ts
(+327 files in other folders)
