[project]
name = "elastic-repo-inventory"
version = "0.1.0"
description = "Inventory selected Elastic documentation repositories."
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

