[project]
name = "elastic-repo-inventory"
version = "0.1.0"
description = "Inventory selected Elastic documentation repositories."
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30",
    "fastapi>=0.115",
    "httpx>=0.27",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]
exclude = ["sources*", "artifacts*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests", "backend/tests"]
pythonpath = ["."]
